tests/int/snapshots/r#mod__int__use_command__module_module::locate_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "module::locate"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::{DEFAULT_SRC_DIR, MODULE_FILE_NAME, PATH_QUALIFIER_CRATE}

----- stderr -----
